# clang-include-cleaner

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  clang-include-cleaner_version.txt  pyproject.toml
.github/workflows/: release.yml
clang_include_cleaner/: __init__.py
test/: test_executable.py
